--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ body {
     font-style: normal;
     background: none;
     border: none;
-    color: #fff;
+    color: #ece7e7;
+    filter: opacity(50%);
     font-size: 1.1em;
     margin: 0 10px;
     padding: 5px 10px;
@@ -71,8 +72,7 @@ body {
 
 .flavor-selector button:hover,
 .flavor-selector button.active {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 20px;
+    filter: opacity(100%);
 }
 
 .navigation {
