--- a/style.css
+++ b/style.css
@@ -42,9 +42,7 @@ body {
 
 .image-container {
     position: relative;
-    width: 300px;
-    height: 300px;
-    margin: 0 auto 30px;
+    margin: 0 auto;
 }
 
 .bowl-image {
@@ -101,6 +99,10 @@ body {
 }
 
 @media (max-width: 600px) {
+    .image-container {
+        width: 90%;
+    }
+
     h1 {
         font-size: 2em;
     }
