--- a/style.css
+++ b/style.css
@@ -40,9 +40,95 @@ body {
     justify-self: center;
 }
 
+.title-and-modal {
+    display: flex; justify-content: center;
+}
+
 .title {
     font-size: 2.5em;
-    margin-bottom: 10px;
+}
+
+.modal-button {
+    position: sticky;
+    left: 80%;
+    align-self: center;
+    transition: all 0.3s ease;
+    outline: 0.5px solid #ece7e7;
+    border: none;
+    border-radius: 10px;
+    padding: 1em;
+    background: rgba(256, 256, 256, 0.2);
+    cursor: pointer;
+    font-size: 1em;
+    color: #ece7e7;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    text-align: justify;
+}
+
+.modal-content {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0.5));
+    margin: auto;
+    padding: 20px;
+    outline: 1px solid #ece7e7;
+    border: none;
+    border-radius: 10px;
+    width: 80%;
+}
+
+.modal-content li {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+.close {
+    color: #ece7e7;
+    filter: opacity(50%);
+    float: right;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #ece7e7;
+    filter: opacity(100%);
+    transform: scale(1.2);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.tab-content {
+    display: none;
+}
+
+.tab-content.active {
+    display: block;
+}
+
+.tab-button {
+    padding: 10px 20px;
+    background-color: #ece7e7;
+    filter: opacity(50%);
+    border: none;
+    border-radius: 10px 10px 0 0;
+    cursor: pointer;
+}
+
+.tab-button.active {
+    background-color: #ece7e7;
+    filter: opacity(100%);
 }
 
 .description {
